--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
   <title>Parcelas</title>
 </head>
 
-<body class="bg-gradient-to-r from-amber-900 to-amber-950">
+<body style="background-color: #52493a;">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
